--- a/public/css/content.css
+++ b/public/css/content.css
@@ -39,7 +39,7 @@
     font-size: 16px;
     line-height: normal;
     transition: .3s ease transform;
-    transform: translateY(-300px);
+    transform: translateY(-100%);
 }
 
 #oraculum-coresearch-main-panel.opened {
