--- a/public/css/content.css
+++ b/public/css/content.css
@@ -126,3 +126,55 @@
 .oraculum_list_comments {
 
 }
+
+#oraculum-coresearch-main-panel .oraculum-tag-component {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    display: inline-block;
+    padding: 4px 6px;
+    color: #555;
+    vertical-align: middle;
+    border-radius: 4px;
+    max-width: 100%;
+    line-height: 22px;
+    cursor: text;
+    width: 100%;
+}
+
+#oraculum-coresearch-main-panel .oraculum-tag-component .tag {
+    margin-right: 2px;
+    color: white;
+    background-color: #28a745;
+    display: inline-block;
+    padding: .2em .6em .3em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+}
+
+#oraculum-coresearch-main-panel .oraculum-tag-component .tag .remove-tag {
+    margin-left: 8px;
+    cursor: pointer;
+    color: #333131;
+}
+
+#oraculum-coresearch-main-panel .oraculum-tag-component .tag .remove-tag::before {
+    content: "x";
+}
+
+#oraculum-coresearch-main-panel .oraculum-tag-component input {
+    border: none;
+    box-shadow: none;
+    outline: none;
+    background-color: transparent;
+    padding: 0 6px;
+    margin: 0;
+    width: auto;
+    max-width: inherit;
+    min-width: auto;
+}
